--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <h3>Zebry</h3>
             <img src="https://cdn.pixabay.com/photo/2022/11/05/20/18/zebra-7572734_1280.jpg" alt="">
         </section>
+        <section>
+            <h3>Kangur</h3>
+            <img src="https://cdn.pixabay.com/photo/2021/08/19/10/47/kangaroo-6557734_960_720.jpg" alt="">
+        </section>
     </main>
+
 </body>
 </html>
