--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <h3>Zebry</h3>
             <img src="https://cdn.pixabay.com/photo/2022/11/05/20/18/zebra-7572734_1280.jpg" alt="">
         </section>
+        <h3> Kapibary </h3>
+        <section>
+            <img src="https://cdn.pixabay.com/photo/2021/10/27/12/03/capybara-6747140_1280.jpg" alt="">
+
+        </section>
     </main>
 </body>
 </html>
