--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <h3>Zebry</h3>
             <img src="https://cdn.pixabay.com/photo/2022/11/05/20/18/zebra-7572734_1280.jpg" alt="">
         </section>
+        <section>
+            <h3>Tygrys</h3>
+            <img src="https://media.istockphoto.com/id/949472768/pl/zdj%C4%99cie/portret-tygrysa.jpg?s=2048x2048&w=is&k=20&c=mief2AMFQKG3icVp7tDyZrNboYFdQ2FeZyH9pvaXqzI=">
+        </section>
     </main>
 </body>
 </html>
