--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <h3>Zebry</h3>
             <img src="https://cdn.pixabay.com/photo/2022/11/05/20/18/zebra-7572734_1280.jpg" alt="">
         </section>
+        <section>
+            <h3>Lew</h3>
+            <img src="https://cdn.pixabay.com/photo/2018/04/13/21/24/lion-3317670_1280.jpg" alt="">
+        </section>
     </main>
 </body>
 </html>
