--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <h3>Zebry</h3>
             <img src="https://cdn.pixabay.com/photo/2022/11/05/20/18/zebra-7572734_1280.jpg" alt="">
         </section>
+
+        <section>
+            <h3>Surykatki</h3>
+            <img src="https://cdn.pixabay.com/photo/2016/06/02/17/01/nature-1431526_1280.jpg" alt="Surykatki">
+        </section>
     </main>
 </body>
 </html>
