Dodano opis kangura

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <section>
             <h3>Kangur</h3>
             <img src="https://cdn.pixabay.com/photo/2021/08/19/10/47/kangaroo-6557734_960_720.jpg" alt="">
+            <p>Kangur to duży ssak roślinożerny z rodziny kangurowatych, zamieszkujący Australię i Nową Gwineę. Charakteryzuje się silnymi tylnymi nogami, długim ogonem i dużymi uszami. Skacze na dużą odległość, a jego dieta opiera się głównie na trawie. Kangury żyją w grupach zwanych mobami.</p>
         </section>
     </main>
 
