--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h3> Kapibary </h3>
         <section>
             <img src="https://cdn.pixabay.com/photo/2021/10/27/12/03/capybara-6747140_1280.jpg" alt="">
+            <h3>największy żyjący współcześnie gatunek gryzonia z rodziny kawiowatych. Niektórzy autorzy umieszczają kapibarę wielką w monotypowej rodzinie kapibar (Hydrochoeridae lub Hydrochaeridae). Jest roślinożernym zwierzęciem wodno-lądowym, zamieszkującym tereny Ameryki Południowej. H. hydrochaeris jest gryzoniem o masywnej budowie ciała – jego waga dochodzi do 65 kg. Międzynarodowa Unia Ochrony Przyrody (IUCN) wymienia Hydrochoerus hydrochaeris w Czerwonej księdze gatunków zagrożonych jako gatunek najmniejszej troski (LC – least concern) </h3>
 
         </section>
     </main>
