--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <h3>Zebry</h3>
             <img src="https://cdn.pixabay.com/photo/2022/11/05/20/18/zebra-7572734_1280.jpg" alt="">
         </section>
+        <section>
+            <h3>Lwy</h3>
+            <img src="https://cdn.pixabay.com/photo/2012/03/04/00/09/lions-21787_640.jpg" alt="">
+            <p> Lwy, są królami dżungli, podobno...</p>
+        </section>
     </main>
 </body>
 </html>
