--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <section>
             <h3>Tygrys</h3>
             <img src="https://media.istockphoto.com/id/949472768/pl/zdj%C4%99cie/portret-tygrysa.jpg?s=2048x2048&w=is&k=20&c=mief2AMFQKG3icVp7tDyZrNboYFdQ2FeZyH9pvaXqzI=">
+            Tygrys (Panthera tigris) – gatunek dużego, drapieżnego ssaka łożyskowego z podrodziny panter (Pantherinae) w rodzinie kotowatych (Felidae), największego ze współczesnych[a] pięciu gatunków dzikich kotów z rodzaju Panthera, jeden z największych drapieżników lądowych (wielkością ustępuje jedynie niektórym niedźwiedziom).
         </section>
     </main>
 </body>
