dodaj zmiany w sekcji surykatka

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <section>
             <h3>Surykatki</h3>
             <img src="https://cdn.pixabay.com/photo/2016/06/02/17/01/nature-1431526_1280.jpg" alt="Surykatki">
+            <h2> Surykatka szara, surykatka (Suricata suricatta) – gatunek drapieżnego ssaka z podrodziny Mungotinae w obrębie rodziny mangustowatych (Herpestidae). W Afryce oraz krajach anglojęzycznych znana jest pod nazwą meerkat. Ta nazwa została błędnie zaczerpnięta z języka niderlandzkiego, a tłumaczyć ją można jako kot jeziorowy. W niderlandzkim surykatka zawsze była nazywana stokstaartje, a niderlandzkie słowo meerkat odnosi się do koczkodana.</h2>
         </section>
     </main>
 </body>
