--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <section>
             <h3>Lew</h3>
             <img src="https://cdn.pixabay.com/photo/2018/04/13/21/24/lion-3317670_1280.jpg" alt="">
+        </p> Lew jest drapieżnikiem, dzięki swemu majestatycznemu wyglądowi budzi lęk. Jego gęsta sierść ubarwiona jest płowo żółto. Ma silne szczęki i cztery potężne łapy. U samców występuje charakterystyczna długa grzywa. Samice pozbawione są grzywy - są mniejsze od samców, ale również dobrze zbudowane.</p>
         </section>
     </main>
 </body>
