--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <img src="https://cdn.pixabay.com/photo/2018/04/13/21/24/lion-3317670_1280.jpg" alt="">
         </p> Lew jest drapieżnikiem, dzięki swemu majestatycznemu wyglądowi budzi lęk. Jego gęsta sierść ubarwiona jest płowo żółto. Ma silne szczęki i cztery potężne łapy. U samców występuje charakterystyczna długa grzywa. Samice pozbawione są grzywy - są mniejsze od samców, ale również dobrze zbudowane.</p>
   </section>
+        <section>
             <h3>Tygrys</h3>
             <img src="https://media.istockphoto.com/id/949472768/pl/zdj%C4%99cie/portret-tygrysa.jpg?s=2048x2048&w=is&k=20&c=mief2AMFQKG3icVp7tDyZrNboYFdQ2FeZyH9pvaXqzI=">
             Tygrys (Panthera tigris) – gatunek dużego, drapieżnego ssaka łożyskowego z podrodziny panter (Pantherinae) w rodzinie kotowatych (Felidae), największego ze współczesnych[a] pięciu gatunków dzikich kotów z rodzaju Panthera, jeden z największych drapieżników lądowych (wielkością ustępuje jedynie niektórym niedźwiedziom).
