--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
             <h3>Surykatki</h3>
             <img src="https://cdn.pixabay.com/photo/2016/06/02/17/01/nature-1431526_1280.jpg" alt="Surykatki">
             <h2> Surykatka szara, surykatka (Suricata suricatta) – gatunek drapieżnego ssaka z podrodziny Mungotinae w obrębie rodziny mangustowatych (Herpestidae). W Afryce oraz krajach anglojęzycznych znana jest pod nazwą meerkat. Ta nazwa została błędnie zaczerpnięta z języka niderlandzkiego, a tłumaczyć ją można jako kot jeziorowy. W niderlandzkim surykatka zawsze była nazywana stokstaartje, a niderlandzkie słowo meerkat odnosi się do koczkodana.</h2>
-        <section>
+        </section>
+        
+            <section>
             <h3>Lew</h3>
             <img src="https://cdn.pixabay.com/photo/2018/04/13/21/24/lion-3317670_1280.jpg" alt="">
         <p> Lew jest drapieżnikiem, dzięki swemu majestatycznemu wyglądowi budzi lęk. Jego gęsta sierść ubarwiona jest płowo żółto. Ma silne szczęki i cztery potężne łapy. U samców występuje charakterystyczna długa grzywa. Samice pozbawione są grzywy - są mniejsze od samców, ale również dobrze zbudowane.</p>
   </section>
+        
         <section>
             <h3>Tygrys</h3>
             <img src="https://media.istockphoto.com/id/949472768/pl/zdj%C4%99cie/portret-tygrysa.jpg?s=2048x2048&w=is&k=20&c=mief2AMFQKG3icVp7tDyZrNboYFdQ2FeZyH9pvaXqzI=">
