--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <h3>Zebry</h3>
             <img src="https://cdn.pixabay.com/photo/2022/11/05/20/18/zebra-7572734_1280.jpg" alt="">
         </section>
+        <section>
+            <h3>Zolw</h3>
+            <img src="https://cdn.pixabay.com/photo/2019/08/28/13/13/turtle-4436760_1280.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ab consequuntur nisi placeat magni consequatur, aliquid quaerat architecto, blanditiis provident debitis, totam nostrum ratione iure nam! Consequuntur porro ipsam reprehenderit!</p>
+        </section>
     </main>
 </body>
 </html>
