--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section>
             <h3>Zolw</h3>
             <img src="https://cdn.pixabay.com/photo/2019/08/28/13/13/turtle-4436760_1280.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ab consequuntur nisi placeat magni consequatur, aliquid quaerat architecto, blanditiis provident debitis, totam nostrum ratione iure nam! Consequuntur porro ipsam reprehenderit!</p>
+            <p>Żółw błotny – gatunek żółwia z rodziny żółwi błotnych i podrzędu żółwi skrytoszyjnych. Jedyny gatunek żółwia żyjący naturalnie w Polsce. W środowisku naturalnym żyje kilkadziesiąt lat.</p>
         </section>
     </main>
 </body>
